<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dc353b"
    android:clickable="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/userinfophoto"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/menu_default_photo2" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"

        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/userinfophoto"
        android:text="zhoujianping002@163.com"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/userinfophoto"
        android:text="100000000"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/userinfophoto"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <!--<LinearLayout-->
        <!--android:id="@+id/menu_message_layout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
        <!--android:id="@+id/menu_message_icon"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_vertical"-->
        <!--android:padding="20dp"-->
        <!--android:src="@drawable/menu_message_icon" />-->

        <!--<TextView-->
        <!--android:id="@+id/step"-->
        <!--style="@style/menu_text_style"-->

        <!--android:layout_width="50dp"-->
        <!--android:text="@string/step" />-->
        <!--</LinearLayout>-->

        //定位

        <LinearLayout
            android:id="@+id/runlinerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_knowledge_layout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="127dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/runimageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:src="@drawable/run" />

            <TextView
                android:id="@+id/runtextview"
                style="@style/menu_text_style"
                android:layout_width="95dp"
                android:text="@string/run" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_knowledge_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--android:layout_below="@id/menu_message_layout"-->


            <ImageView
                android:id="@+id/menu_knowledge_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:src="@drawable/my" />

            <TextView
                android:id="@+id/knowledge_library"
                style="@style/menu_text_style"
                android:layout_width="95dp"
                android:text="@string/selflocation1" />
        </LinearLayout>

        //查找位置

        <LinearLayout
            android:id="@+id/menu_cs_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_knowledge_layout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/menu_cs_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:src="@drawable/search" />

            <TextView
                android:id="@+id/custom_service"
                style="@style/menu_text_style"
                android:layout_width="95dp"
                android:text="@string/searchlocation1" />

        </LinearLayout>

        //轨迹

        <LinearLayout
            android:id="@+id/orbitlinerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_knowledge_layout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="68dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/orbitimageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:src="@drawable/orbit" />

            <TextView
                android:id="@+id/orbittextview"
                style="@style/menu_text_style"
                android:layout_width="95dp"
                android:text="@string/orbit" />

        </LinearLayout>


        //关于

        <LinearLayout
            android:id="@+id/aboutliner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_knowledge_layout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="195dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/aboutimageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:src="@drawable/about" />

            <TextView
                android:id="@+id/About"
                style="@style/menu_text_style"
                android:layout_width="50dp"
                android:text="关于" />

        </LinearLayout>


        //退出登录

        <LinearLayout
            android:id="@+id/menu_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/menu_setting_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:src="@drawable/exit_login" />

            <TextView
                android:id="@+id/exit"
                style="@style/menu_text_style"
                android:text="@string/exit_login" />

        </LinearLayout>

    </RelativeLayout>
    <ImageView
        android:layout_width="15dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:src="@drawable/shadow" />
</RelativeLayout>